Generic MBIM modem object should not attempt to load QMI_SERVICE_FOX
Commit a56f96f0 introduced a change to attempt loading the firmware info using the FOX QMI service in the foxconn plugin. This change is required only in foxconn modems, and so the generic MBIM modem object shouldn't attempt to allocate a FOX client unconditionally.
@ziyou please fix this as soon as possible. The qmi_services array in src/mm-broadband-modem-mbim.c
should NOT have QMI_SERVICE_FOX
, and instead you should allocate the client yourself with mm_port_mbim_allocate_qmi_client()
and release it with mm_port_mbim_release_qmi_client()
when no longer needed, all done inside the firmware_load_update_settings()
method in mm-broadband-modem-mbim-foxconn.c
.